bad/method_call_invalid_arg_conversion_null_to_bool.example_compiler_output
ERROR
[1mbad/method_call_invalid_arg_conversion_null_to_bool.lat:3:14: [1;31merror: [0;1mvalue of type `null` is not convertible to type `boolean`[m
	(new G).foo(null);
	            [1;32m^[m
[1mbad/method_call_invalid_arg_conversion_null_to_bool.lat:8:2: [1;34mnote: [0;1m`foo` declared here[m
	void foo(boolean b) {}
	[1;32m^[m
